--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "sha256": "^0.2.0",
     "styled-components": "4.4.1",
     "styled-reset": "^4.1.4",
     "typescript": "^3.7.5",
@@ -83,6 +84,7 @@
     "@babel/helper-builder-react-jsx-experimental": "^7.12.11",
     "@babel/helper-define-map": "^7.12.13",
     "@babel/helper-regex": "^7.10.5",
+    "@types/sha256": "^0.2.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12"
   }
